[package]
name = "starlight-shards-as-rune-arcs"
version = "0.1.0"
edition = "2024"

[dependencies]
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs.git" }
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git" }
pelite = "0.10.0"
chrono = "0.4.42"

[lib]
crate-type = ["cdylib"]
